<resources>
    <string name="app_name">RUPizza</string>
    <string name="RUPizza_main_menu">RU Pizzeria</string>
    <string name="select_pizza">Select Pizza</string>
    <string name="clear_order">Clear Order</string>
    <string name="place_order">Place Order</string>
    <string name="remove_pizza">Remove Pizza</string>
    <string name="subtotal_0_00">Subtotal: $0.00</string>
    <string name="sales_tax_0_00">Sales Tax: $0.00</string>
    <string name="order_number_1">Order Number: 1</string>
    <string name="order_total_0_00">Order Total: $0.00</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="use_the_spinner_to_select_toppings_re_select_a_topping_to_remove_it">Use the spinner to select toppings. Re-select a topping to remove it</string>
    <string name="image_of_the_pizza">Image of the pizza</string>
    <string name="pizza_name">Pizza Name</string>
    <string name="price">Price</string>
    <string name="selected_toppings">Selected Toppings:</string>
    <string name="large">Large</string>
    <string name="medium">Medium</string>
    <string name="small">Small</string>
    <string name="order_number">Order Number:</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="order_total_tax_included_0_00">Order Total (Tax Included): $0.00</string>
    <string name="place_order2">Place Order</string>
    <string name="store_orders">Store Orders</string>
    <string name="crustDetails1">"Crust: "</string>
    <string name="subtotal1">Subtotal: $</string>
    <string name="tax1">Tax: $</string>
    <string name="crust1">"Crust: "</string>
    <string name="order_total_tax_included_0_001">Order Total (Tax Included): $ 0.00</string>
</resources>